# flask-news-app

./: app.db  config.py  pyproject.toml
app/: __init__.py
app/controllers/: __init__.py
app/controllers/keyword/: __init__.py
app/controllers/news/: __init__.py  _news.py  ai.py  sto.py
app/controllers/platform/: __init__.py
app/crawlers/: NewsCrawler.py  __init__.py
app/crawlers/daum/: __init__.py
app/crawlers/google/: __init__.py
app/crawlers/naver/: __init__.py
app/models/: keyword.py  news.py  platform.py
app/routes/: __init__.py  ai.py  keyword.py  news.py  sto.py
app/services/crawler/: __init__.py
app/services/keyword/: __init__.py
app/utils/: types.py
