[tool.poetry]
name = "news"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "news", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
flask-sqlalchemy = "^3.0.5"
flask = "^2.3.2"
flask-restful = "^0.3.10"
sqlalchemy = "^2.0.20"
mysql-connector-python = "^8.1.0"
pymysql = "^1.1.0"
cryptography = "^41.0.3"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"
flask-apscheduler = "^1.12.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
